<resources>
    <string name="app_name">Insuring My Life</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_logo">app_logo</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_register">Insuring My Life: Register</string>
    <string name="title_activity_initial">Insuring My Life</string>
    <string name="logout">Logout</string>
    <string name="drawer_open"> Drawer open</string>
    <string name="drawer_close"> Drawer Close</string>
    <string name="email_username">User Name / E-mail</string>
    <string name="title_activity_car">Insuring My Life: Auto</string>
    <string name="title_activity_vehicles">Auto: Vehicles</string>
    <string name="title_activity_house">Insuring My Life: Properties</string>
    <string name="title_activity_new_profile">Insuring My Life: Update Profile</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="cvc">CVC</string>
    <string name="cc_num">Credit Card Number</string>
    <string name="birthday">Birthday</string>
    <string name="exp_date">Expiration Date</string>
    <string name="cc_info">Credit Card Information</string>
    <string name="personal_info">Personal Information</string>
    <string name="cc_owner">Credit Card Owner Name</string>
    <string name="new_profile">Add New Profile</string>
    <string name="group_image">group image</string>
    <string name="title_activity_about_aa">Insuring My Life: About AAA</string>
    <string name="about_aaa">About AAA</string>
    <string name="about_aaa_text">        Founded in 1902, AAA is a not-for-profit organization of clubs serving more than 50 million members in the United States and Canada. AAA serves its members through a network of 1,100 offices with more than 45,000 employees. Through affiliations with automobile and touring clubs around the world, AAA provides benefits to members traveling in 130 countries on six continents. AAA exists for its members and will judge everything it does by how well it serves their needs.</string>
    <string name="about_aaa_ok">AAA Oklahoma, the Oklahoma affiliate of AAA, was founded in 1920 with 289 members and has grown to more than 360,000 members statewide. The club\'s 250+ employees operate 12 full service and 32 insurance and membership offices throughout Oklahoma...and more are planned!</string>
    <string name="about_aaa_more">    While continuing to provide many of the traditional products and services that have made AAA one of the most recognized and respected names in the world, AAA Oklahoma is bringing forth new innovative services that allow us to create excellent experiences and inspire our members and employees to build strong lasting relationships.</string>
    <string name="about_aaa_title2">Over the years, AAA has become recognized as: </string>
    <string name="about_aaa_last">    \n
    • The nation\’s leading provider of roadside assistance and automotive-related expertise. \n
    • A financially strong and stable insurance company rated \"A+\" by A.M. Best, the insurance industry\'s most respected ratings agency. \n
    • The world\’s largest publisher of travel information and one of the world’s largest leisure travel agencies. \n
    • One of the most active advocates for the welfare of the traveling public. \n
    • One of the fastest growing financial products and services organizations in the United States. \n</string>
    <string name="title_activity_new_vehicle">Vehicles: New Vehicle</string>
    <string name="police_number">Police Number</string>
    <string name="main_driver">Driver\'s Name</string>
    <string name="year">Year</string>
    <string name="car_tag">Car Tag</string>
    <string name="car_model">Car Model</string>
    <string name="aaa_number">AAA Customer Number</string>
    <string name="update_profile">Update Profile</string>
    <string name="title_activity_quote">Vehicles: Get a Quote</string>
    <string name="vehicle_info">Vehicle Information</string>
    <string name="driver_info">Driver Information</string>
    <string name="pick_driver_birthday">Pick Birthday</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="new_vehicle_driver">New Vehicle and Driver Information</string>
    <string name="drivers_license">Drivers License Number</string>
    <string name="title_activity_forgot_login">Forgot Login / Password</string>
    <string name="title_activity_quiz">Quizzes: Quiz</string>
    <string name="q1"> Question Number One! </string>
    <string name="q2"> Question Number Two! </string>
    <string name="q3"> Question Number Three! </string>
    <string name="q4"> Question Number Four! </string>
    <string name="q5"> Question Number Five! </string>
    <string name="q6"> Question Number Six! </string>
    <string-array name="array1">
        <item name="ar1"> Standard questions that is being showed. I should think that some options would be big than one line. 1</item>
        <item name="ar2"> Standard questions that is being showed. I should think that some options would be big than one line. 1</item>
        <item name="ar3"> Short Answer!!</item>
        <item name="ar4"> Standard questions that is being showed. I should think that some options would be big than one line. 1</item>
        <item name="ar5">another not very big answer</item>
    </string-array>
    <string-array name="array2">
        <item name="ar1"> Standard questions that is being showed. I should think that some options would be big than one line. 2</item>
        <item name="ar2"> Standard questions that is being showed. I should think that some options would be big than one line. 2</item>
        <item name="ar3"> Short Answer!!</item>
        <item name="ar4"> Standard questions that is being showed. I should think that some options would be big than one line. 2</item>
        <item name="ar5">another not very big answer</item>
    </string-array>
    <string-array name="array3">
        <item name="ar1"> Standard questions that is being showed. I should think that some options would be big than one line. 3</item>
        <item name="ar2"> Standard questions that is being showed. I should think that some options would be big than one line. 3</item>
        <item name="ar3"> Short Answer!!</item>
        <item name="ar4"> Standard questions that is being showed. I should think that some options would be big than one line. 3</item>
        <item name="ar5">another not very big answer</item>
    </string-array>
    <string-array name="array4">
        <item name="ar1"> Standard questions that is being showed. I should think that some options would be big than one line. 4</item>
        <item name="ar2"> Standard questions that is being showed. I should think that some options would be big than one line. 4</item>
        <item name="ar3"> Short Answer!!</item>
        <item name="ar4"> Standard questions that is being showed. I should think that some options would be big than one line. 4</item>
        <item name="ar5">another not very big answer</item>
    </string-array>
    <string-array name="array5">
        <item name="ar1"> Standard questions that is being showed. I should think that some options would be big than one line. 5</item>
        <item name="ar2"> Standard questions that is being showed. I should think that some options would be big than one line. 5</item>
        <item name="ar3"> Short Answer!!</item>
        <item name="ar4"> Standard questions that is being showed. I should think that some options would be big than one line. 5</item>
        <item name="ar5">another not very big answer</item>
    </string-array>
    <string-array name="array6">
        <item name="ar1"> Standard questions that is being showed. I should think that some options would be big than one line. 6</item>
        <item name="ar2"> Standard questions that is being showed. I should think that some options would be big than one line. 6</item>
        <item name="ar3"> Short Answer!!</item>
        <item name="ar4"> Standard questions that is being showed. I should think that some options would be big than one line. 6</item>
        <item name="ar5">another not very big answer</item>
    </string-array>
    <string-array name="numbers">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
        <item name="7">7</item>
        <item name="8">8</item>
        <item name="9">9</item>
    </string-array>
    <string-array name="residence_type">
        <item name="house">House</item>
        <item name="townhouse">Townhouse</item>
        <item name="condo">Condo</item>
        <item name="mobile">Mobile Home</item>
        <item name="apartment">Apartment</item>
        <item name="parents">Live with Parents</item>
    </string-array>
    <string-array name="accident_causes">
        <item name="cause1"> Cause of Accident One</item>
        <item name="cause2"> Cause of Accident Two</item>
        <item name="cause3"> Cause of Accident Three</item>
        <item name="cause4"> Cause of Accident Four</item>
        <item name="cause5"> Cause of Accident Five</item>
        <item name="cause6"> Cause of Accident Six</item>
    </string-array>
    <string name="title_activity_view_quizzes">Insuring My Life: Quizzes</string>
    <string name="title_activity_quizz_result">Quizzes: Quiz Result</string>
    <string name="title_activity_my_agent">Insuring My Life: My Agent</string>
    <string name="title_activity_health">Insuring My Life: Health</string>
    <string name="title_activity_report_claim">Vehicles: Report Claim</string>
    <string name="date">Date</string>
    <string name="incident_and_time">Incident Date and Time</string>
    <string name="select_one">Select One</string>
    <string name="incident_cause">Cause of Incident</string>
    <string name="incident_info">Incident Info</string>
    <string name="policy_num">Policy # </string>
    <string name="time">Time</string>
    <string name="vehicle_involved">Which Vehicle was Involved!</string>
    <string name="claims">Claims</string>
    <string name="quote">Quote</string>
    <string name="get_quote">Get Quote</string>
    <string name="existing_claims">Existing Claims</string>
    <string name="string_result">Congratulations! You scored 8 right out of 10. \n You have earned a savings of 10%</string>
    <string name="current_attempts">You currently have 3 attempts left to try for a better discount.</string>
    <string name="retaque_quiz">Retaque Quiz</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="state">State</string>
    <string name="title_activity_quote_value">Insuring My Life: Quote Result</string>
    <string name="quote_result_agent">Remember that this value is an estimate. For a more accurate value please click on the button send this to agent. Your agent will receive this data and give you a more accurate value. Feel free to add any information that you think is important on the e-mail.</string>
    <string name="title_activity_forgot_password">Insuring My Life: Forgot Password</string>
    <string name="forgot_username"><u> Forgot Username or Password </u></string>
    <string name="title_activity_after_claim">Claims: Result</string>
    <string name="title_activity_view_claims">Insuring My Life: View Claims</string>
    <string name="title_activity_view_houses">Houses: My Houses</string>
    <string name="title_activity_new_house">Houses: Add New House</string>
</resources>