<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/blue"
        tools:context=".NewProfileActivity"

        >
        <TextView
            android:id="@+id/personalInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:text="@string/personal_info"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/first_name"
            android:textColorHint="@android:color/white"
            android:layout_below="@id/personalInfo"
            />
        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/last_name"
            android:layout_below="@+id/firstName"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textColorHint="@android:color/white"
            />
        <TextView
            android:id="@+id/birthdayTextHelper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:text="@string/birthday"
            android:layout_below="@id/lastName"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textStyle="bold"
            />
        <LinearLayout
            android:id="@+id/birthdaySpinners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/birthdayTextHelper"
            android:weightSum="1"
            android:paddingTop="@dimen/activity_vertical_margin"
        >
            <Spinner
                android:id="@+id/monthSpinner"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:entries="@array/months"
             />
            <Spinner
                android:id="@+id/daySpinner"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
             />
            <Spinner
                android:id="@+id/yearSpinner"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
            />
        </LinearLayout>
        <TextView
            android:id="@+id/creditCardInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:text="@string/cc_info"
            android:layout_below="@id/birthdaySpinners"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/ccName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/creditCardInfo"
            android:hint="@string/cc_owner"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />
        <LinearLayout
            android:id="@+id/ccNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ccName"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
        >
        <EditText
            android:id="@+id/ccNumber"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:hint="@string/cc_num"
            android:layout_weight="0.8"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColorHint="@android:color/white"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:inputType="number"
        />
        <EditText
            android:id="@+id/cvc"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:hint="@string/cvc"
            android:textColorHint="@android:color/white"
            android:inputType="number"
        />
        </LinearLayout>
        <TextView
            android:id="@+id/expDateHelper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:text="@string/exp_date"
            android:layout_below="@id/ccNumberLayout"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textStyle="bold"
            />
        <LinearLayout
            android:id="@+id/expDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/expDateHelper"
            android:weightSum="1"
            android:paddingTop="@dimen/activity_vertical_margin"
            >
            <Spinner
                android:id="@+id/expMonthSpinner"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:entries="@array/months"
                />
            <Spinner
                android:id="@+id/expYearSpinner"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                />
            <Spinner
                android:id="@+id/ccCompany"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:entries="@array/cc_companies"
                />

            </LinearLayout>
        <Button
            android:id="@+id/addNewProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_profile"
            android:layout_below="@id/expDate"
            android:background="@android:color/holo_green_dark"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />
    </RelativeLayout>
</ScrollView>