<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/background"
        tools:context=".NewProfileActivity"

        >
        <TextView
            android:id="@+id/personalInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:text="@string/personal_info"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textStyle="bold"
            android:padding="10dip"
            />
        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/first_name"
            android:layout_below="@id/personalInfo"
            android:padding="10dip"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/box"
            />
        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/last_name"
            android:layout_below="@+id/firstName"
            android:padding="10dip"
            android:background="@drawable/box"
            />
        <EditText
            android:id="@+id/aaaNumber"
            android:background="@drawable/box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastName"
            android:padding="10dip"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/aaa_number"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />
        <TextView
            android:id="@+id/birthdayTextHelper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:text="@string/birthday"
            android:layout_below="@id/aaaNumber"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:padding="10dip"
            android:textStyle="bold"
            />
        <LinearLayout
            android:id="@+id/birthdaySpinners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/birthdayTextHelper"
            android:weightSum="1"
            android:paddingTop="@dimen/activity_vertical_margin"
        >
            <Spinner
                android:id="@+id/monthSpinner"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:entries="@array/months"
                
             />
            <Spinner
                android:id="@+id/daySpinner"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"

             />
            <Spinner
                android:id="@+id/yearSpinner"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"

            />
        </LinearLayout>
        <TextView
            android:id="@+id/creditCardInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:text="@string/cc_info"
            android:layout_below="@id/birthdaySpinners"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/ccName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/creditCardInfo"
            android:hint="@string/cc_owner"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:padding="10dip"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/box"
            />
        <LinearLayout
            android:id="@+id/ccNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ccName"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"

         >
        <EditText
            android:id="@+id/ccNumber"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:hint="@string/cc_num"
            android:layout_weight="0.75"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:padding="10dip"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:inputType="number"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/box"

        />
        <EditText
            android:id="@+id/cvc"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:hint="@string/cvc"
            android:padding="10dip"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@drawable/box"
        />
        </LinearLayout>
        <TextView
            android:id="@+id/expDateHelper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:text="@string/exp_date"
            android:layout_below="@id/ccNumberLayout"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textStyle="bold"
            />
        <LinearLayout
            android:id="@+id/expDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/expDateHelper"
            android:weightSum="1"
            android:paddingTop="@dimen/activity_vertical_margin"
            >
            <Spinner
                android:id="@+id/expMonthSpinner"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:entries="@array/months"

                />
            <Spinner
                android:id="@+id/expYearSpinner"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"

                />
            <Spinner
                android:id="@+id/ccCompany"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:entries="@array/cc_companies"

                />

            </LinearLayout>
        <Button
            android:id="@+id/updateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_profile"
            android:layout_below="@id/expDate"
            android:background="@color/button_background"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
    </RelativeLayout>
</ScrollView>